[package]
name = "synacor-vm"
version = "0.1.0"
authors = ["Purple Myst <PurpleMyst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0.23"
bytemuck = "1.4.1"
eyre = "0.6.3"
color-eyre = "0.5.10"
rayon = "1.5.0"
crossterm = "0.18"
tui = { version = "0.14", default-features = false, features = [ "crossterm" ] }
scopeguard = "1.1.0"
